# stm32_cubemx_ds3231

./: .mxproject  CMakeLists.txt  stm32-cubemx-ds3231.ioc
app/: CMakeLists.txt
app/ds3231/: CMakeLists.txt  ds3231.c  ds3231.cpp  ds3231.h  ds3231.hpp  ds3231_config.h  ds3231_config.hpp  ds3231_registers.h  ds3231_registers.hpp  ds3231_utility.hpp
app/main/: CMakeLists.txt  main.cpp
cmake/stm32cubemx/: CMakeLists.txt
make/: common.mk
